# SWARM-DMAS-wrench

./: .gitignore  CMakeLists.txt  Dockerfile  Phase_One_TODOs.md  README.md  TODO_and_FIXME.md  install_deps.sh  requirements.txt  rho_testing_results.csv  swarm-dmas-gcloud-credentials.json  swarm-dmas-llm.env
bash_scripts/: README.md  analyze_results.sh  analyze_workloads.sh  compare_results.sh  run_all_exp_parallel.sh  run_all_experiments.sh  run_comparisons.sh  run_job_generation.sh
data generation/: README.md  data_analysis.ipynb  job_generation.py
data generation/data/: heterogeneous_mix_10000.json
data_analysis/: aggregate_results.py  analyze_results.py  analyze_results_old.py  analyze_workload.py  biddingComparison.Rscript  biddingComparison.py  capacity_analysis.py  compareToCentralized.Rscript  compare_cen_dec_schedules.py  compare_gantt.py  comparison_analysis.Rscript  compute_ta_gaps.py  compute_wait_fraction.py  confirm_cen_dec_bid_order.py  output_analysis.Rscript  plot_arrival_patterns.py  plot_node_walltime_distribution.Rscript  plot_ta_breakdown.R  plot_turnaround.R  plot_workload_single_figure.py  rho_testing.py  visualize_workload.py  workload_analysis.Rscript
data_generation/: README.md  job_generation.py  job_generation_nxwt_correlated.py  job_generation_v9.py  validate_generated_jobs.py
data_generation/data/: bursty_high_stress_homogeneous_short_1000_r32.json  bursty_high_stress_homogeneous_short_2000_r16.json  bursty_high_stress_large_long_54_rho0.9.json  bursty_high_stress_large_long_91_rho1.5.json  bursty_high_stress_mixed_20_80_1000_r32.json  bursty_high_stress_mixed_20_80_112_rho1.5.json  bursty_high_stress_mixed_20_80_2000_r16.json  bursty_high_stress_mixed_20_80_67_rho0.9.json  bursty_high_stress_mixed_80_20_1000_r32.json  bursty_high_stress_mixed_80_20_2000_r16.json  bursty_high_stress_mixed_80_20_251_rho0.9.json  bursty_high_stress_mixed_80_20_415_rho1.5.json  bursty_high_stress_only_large_long_1000_r32.json  bursty_high_stress_only_large_long_2000_r16.json  bursty_high_stress_small_short_2880_rho0.9.json  bursty_high_stress_small_short_4800_rho1.5.json  bursty_low_stress_homogeneous_short_1000_r32.json  bursty_low_stress_homogeneous_short_2000_r16.json  bursty_low_stress_large_long_54_rho0.9.json  bursty_low_stress_large_long_91_rho1.5.json  bursty_low_stress_mixed_20_80_1000_r32.json  bursty_low_stress_mixed_20_80_112_rho1.5.json  bursty_low_stress_mixed_20_80_2000_r16.json  bursty_low_stress_mixed_20_80_67_rho0.9.json  bursty_low_stress_mixed_80_20_1000_r32.json  bursty_low_stress_mixed_80_20_2000_r16.json  bursty_low_stress_mixed_80_20_251_rho0.9.json  bursty_low_stress_mixed_80_20_415_rho1.5.json  (+37 more)
experiments/: test.json  test_centralized.json  test_decentralized.json
hardware_failure_profiles/: test.json
include/: BatchServiceController.h  ControlMessages.h  HPCSystemDescription.h  HPCSystemStatus.h  HeuristicBiddingSchedulingPolicy.h  JobDescription.h  JobGenerationController.h  JobLifecycleTrackerAgent.h  JobSchedulingAgent.h  PureLocalSchedulingPolicy.h  PythonBiddingSchedulingPolicy.h  RandomBiddingSchedulingPolicy.h  SchedulingPolicy.h  WorkloadSubmissionAgent.h  utils.h
prompts/: llm_default_prompt.txt  llm_prompt_balanced.txt
python_scripts/: CentralizedScheduling.py  EmbeddingBidding.py  HeuristicBidding.py  bidder_template.py  llm_claude_bidder.py  llm_claude_bidder_working.py  llm_gptoss_bidder_working.py  llm_sn_bidder.py  random_bidder.py
results/: aggregated_metrics.csv  bursty_high_stress_homogeneous_short_1000_r32_EmbeddingBidding.csv  bursty_high_stress_homogeneous_short_1000_r32_HeuristicBidding.csv  bursty_high_stress_homogeneous_short_1000_r32_PureLocal.csv  bursty_high_stress_homogeneous_short_1000_r32_RandomBidding.csv  bursty_high_stress_large_long_54_rho0.9_EmbeddingBidding.csv  bursty_high_stress_large_long_54_rho0.9_HeuristicBidding.csv  bursty_high_stress_large_long_54_rho0.9_LLMBidding.csv  bursty_high_stress_large_long_54_rho0.9_PureLocal.csv  bursty_high_stress_large_long_54_rho0.9_RandomBidding.csv  bursty_high_stress_large_long_91_rho1.5_EmbeddingBidding.csv  bursty_high_stress_large_long_91_rho1.5_HeuristicBidding.csv  bursty_high_stress_large_long_91_rho1.5_LLMBidding.csv  bursty_high_stress_large_long_91_rho1.5_PureLocal.csv  bursty_high_stress_large_long_91_rho1.5_RandomBidding.csv  bursty_high_stress_mixed_20_80_1000_r32_EmbeddingBidding.csv  bursty_high_stress_mixed_20_80_1000_r32_HeuristicBidding.csv  bursty_high_stress_mixed_20_80_1000_r32_PureLocal.csv  bursty_high_stress_mixed_20_80_1000_r32_RandomBidding.csv  bursty_high_stress_mixed_20_80_112_rho1.5_EmbeddingBidding.csv  bursty_high_stress_mixed_20_80_112_rho1.5_HeuristicBidding.csv  bursty_high_stress_mixed_20_80_112_rho1.5_LLMBidding.csv  bursty_high_stress_mixed_20_80_112_rho1.5_PureLocal.csv  bursty_high_stress_mixed_20_80_112_rho1.5_RandomBidding.csv  bursty_high_stress_mixed_20_80_67_rho0.9_EmbeddingBidding.csv  bursty_high_stress_mixed_20_80_67_rho0.9_HeuristicBidding.csv  bursty_high_stress_mixed_20_80_67_rho0.9_LLMBidding.csv  bursty_high_stress_mixed_20_80_67_rho0.9_PureLocal.csv  bursty_high_stress_mixed_20_80_67_rho0.9_RandomBidding.csv  bursty_high_stress_mixed_80_20_1000_r32_EmbeddingBidding.csv  bursty_high_stress_mixed_80_20_1000_r32_HeuristicBidding.csv  bursty_high_stress_mixed_80_20_1000_r32_PureLocal.csv  bursty_high_stress_mixed_80_20_1000_r32_RandomBidding.csv  bursty_high_stress_mixed_80_20_251_rho0.9_EmbeddingBidding.csv  bursty_high_stress_mixed_80_20_251_rho0.9_HeuristicBidding.csv  bursty_high_stress_mixed_80_20_251_rho0.9_LLMBidding.csv  bursty_high_stress_mixed_80_20_251_rho0.9_PureLocal.csv  bursty_high_stress_mixed_80_20_251_rho0.9_RandomBidding.csv  bursty_high_stress_mixed_80_20_415_rho1.5_EmbeddingBidding.csv  bursty_high_stress_mixed_80_20_415_rho1.5_HeuristicBidding.csv  (+164 more)
src/: BatchMultiController.cpp  BatchServiceController.cpp  JobGenerationController.cpp  JobLifecycleTrackerAgent.cpp  JobSchedulingAgent.cpp  SchedulingPolicy.cpp  WorkloadSubmissionAgent.cpp  swarm_dmas.cpp  utils.cpp
(+499 files in other folders)
